--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Priyanshu Pusola"
-  avatar           : "profile.png"
+  avatar           : "1680481859914.jpeg"
   bio              : "CS @ UAlberta | SWE @ Newgen Software Technologies Limited"
   location         : "Edmonton"
   employer         : "Newgen Software Technologies Limited"
