--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,7 @@ author:
   email            : "pusola@ualberta.ca"
   github           : "Ironical-Suburb"
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           :
-  linkedin         :
+  LinkedIn         : "https://www.linkedin.com/in/priyanshu-pusola-642b74241/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
