--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Priyanshu Pusola"
   avatar           : "1680481859914.jpeg"
-  bio              : "CS @ UAlberta | SWE @ Newgen Software Technologies Limited"
+  bio              : "CS @ UAlberta | SWE @ Newgen Software Limited"
   location         : "Edmonton"
-  employer         : "Newgen Software Technologies Limited"
+  employer         : "Newgen Software Limited"
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : "pusola@ualberta.ca"
   github           : "Ironical-Suburb"
